--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^22.5.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongodb": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
