--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "mongodb": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
