--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -w",
     "start": "nodemon dist/index.js",
-    "test": "jest --runInBand --forceExit"
+    "test": "jest --forceExit --maxWorkers=1"
   },
   "repository": {
     "type": "git",
